--- a/styles.css
+++ b/styles.css
@@ -54,13 +54,13 @@ h1
 {
 	border:none;
 	outline:none;
-    border-radius: 10px;
+  border-radius: 10px;
 	background-color: transparent;
 	font-size: 20px;
 	color:white;
 	cursor: pointer;
 	margin:10px;	
-    padding: 20px;		 
+  padding: 20px;		 
 }
 
 .btn:hover{
@@ -68,83 +68,90 @@ h1
 }
 
 
-body
-{
-  background:linear-gradient(0deg, rgba(50, 44, 43, 0.7), rgba(50, 44, 43, 0.7)), url(Mainimg/NM.jpg);
+body {
+  background: linear-gradient(0deg, rgba(50, 44, 43, 0.7), rgba(50, 44, 43, 0.7)), url(Mainimg/NM.jpg);
   background-size: 3000px;
 }
 
-.header 
-{
+.header {
   background-color: #803D3B;
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
-#MainHeader{
+
+#MainHeader {
   margin: -10px;
   margin-top: -30px;
   margin-bottom: 30px;
 }
- 
-.header h2 
-{
+
+.header h2 {
   padding-left: 10px;
   color: white;
 }
-  
-.header span 
-{
+
+.header span {
   margin-right: 10px;
   font-weight: bold;
 }
-  
-.search-container 
-{
+
+.search-container {
   display: flex; 
-  align-items:right; 
+  align-items: center; 
 }
-  
-.search-container input[type="text"]
-{
+
+.search-container input[type="text"] {
   width: 100%; 
   padding: 10px; 
   border: 1px solid #ccc; 
   font-size: 16px; 
 }
-  
 
-.header button 
-{
-  background-color: rgb(240, 234, 234); 
+.header button {
   margin-right: 10px;
+  font-size: 17px;
   padding: 10px;
   color: black;  
   border: none; 
   cursor: pointer; 
 }
 
-h3
-{
+.search-container input[type="button"] {
+  background: none;
+  color: white;
+  border: none;
+  font-size: 16px;
+  margin-right: 50px;
+  cursor: pointer;
+}
+
+.search-container input[type="button"]:hover {
+  text-decoration: underline;
+}
+
+.search-container button {
+  background-color: rgb(240, 234, 234); 
+  padding: 10px;
+}
+
+h3 {
   padding: 10px;
   color: white; 
 }
 
-#Museums
-{
+#Museums {
   margin: 30px;
   text-align: center;
   margin-top: 60px;
 }
 
-.img-con 
-{
+.img-con {
   display: inline-block;
   margin: 0 10px 10px 0;
 }
-  
-.img-con img 
-{
+
+.img-con img {
   width: 250px;
   height: 300px;
   transition: transform 0.3s ease, filter 0.3s ease;
@@ -154,61 +161,67 @@ h3
   transform: scale(1.1);
 }
 
-#AboutUs
-{
+#AboutUs {
   text-align: center;  
-  background-color: #803D3B;
   margin: -10px;
   padding-bottom: 5%;
   padding-top: 0%;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
 /*ABOUT US*/
 
 .container {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 20px;
-    text-align: center;
-    display: inline;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 20px;
+  text-align: center;
+  display: inline;
 }
 
 h2 {
-    text-align: center;
-    font-size: 2.5em;
-    margin-bottom: 40px;
-    color: #ffff;
+  text-align: center;
+  font-size: 2.5em;
+  margin-bottom: 40px;
+  color: #ffff;
 }
 
+
 .about-us {
-    display: inline-block;
-    background-color: #914f4f;
-    margin-left: 60px;
-    margin-right: 10px;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    width: 250px;
-    text-align: center;
+  display: inline-block;
+  background-color: #914f4f;
+  margin-left: 60px;
+  margin-right: 10px;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.1);
+  width: 250px;
+  text-align: center;
 }
 
 .about-us img {
-    height: 70px;
-    border-radius: 50%;
-    margin-bottom: 15px;
+  height: 200px;
+  border-radius: 50%;
+  margin-bottom: 15px;
 }
 
 .about-us h3 {
-    text-align: center;
-    font-size: 1.2em;
-    margin: 0;
-    color: #ffffff;
+  text-align: center;
+  font-size: 1.2em;
+  margin: 0;
+  color: #ffffff;
 }
 
 .about-us p {
-    font-size: 1em;
-    margin: 5px 0;
-    color: #ffffff;
+  font-size: 1em;
+  margin: 5px 0;
+  color: #ffffff;
 }
 
-
+p{
+  margin: auto;
+  text-align: center;
+  font-size: 20px;
+  color: white;
+}
